# Startup_Valuation_Calculator

./: .replit  API_reference.md  FAQ.md  README.md  app.py  chart_generator.py  data_models.py  export_manager.py  export_manager_simple.py  methodology_guide.md  pdf_chart_generator.py  pdf_generator.py  pyproject.toml  technical_documentation.md  test_runner.py  test_suite.py  test_valuation_methods.py  testing_documentation.md  user_guide.md  utils.py  validation_schemas.py  valuation_calculator.py
attached_assets/: app-3.py
